--- a/aboly.html
+++ b/aboly.html
@@ -868,7 +868,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#1.16">1.16</a></div>
 <div class="lybloboriginaltext"><p>子曰：“不患人之不己知，患不知人也。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">患</span>：忧虑，担心。这是其本义，从字形上看，就是忧心如穿。<span class="lyexample"><span>【例】</span><span><a href="#3.24" class="lyref">3.24</a> <span class="lyq">二三子何患于丧乎？</span>成语“患得患失”。</span></span></p></li>
+<li><p><a id="huan4"></a><span class="lyterm">患</span>：忧虑，担心。这是其本义，从字形上看，就是忧心如穿。<span class="lyexample"><span>【例】</span><span><a href="#3.24" class="lyref">3.24</a> <span class="lyq">二三子何患于丧乎？</span>成语“患得患失”。</span></span></p></li>
 <li><p><a id="nov"></a><span class="lyterm">不己<a href="#zhi1b">知</a></span>：“不知己”的倒装。在不、莫、未等否定词开头的简单动宾结构中，如果宾语O是代词，则常被提到否定词N和动词V之间，形成“NOV”的倒装，效果是突出了宾语。如果宾语是“之”，就变成“<a href="#nzhiv">N之V</a>”的倒装结构。<span class="lyexample"><span>【例】</span><span><a href="#4.14" class="lyref">4.14</a> <span class="lyq">不患莫己知。</span>《后汉书·范式传》：<span class="lyq">子未我忘，岂能相及？</span>成语“时不我待”。</span></span></p></li>
 </ul></div>
 </div>
@@ -2195,9 +2195,9 @@ img.characterimg {
 <p>曰：“<a href="#ranqiu">求</a>也可使从政也与？”曰：“求也艺，于从政乎何有？”</p>
 </div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm"><a href="#guo3a">果</a></span>：有决断，坚决，果敢。<span class="lyseealso"><span>【参】</span><span>比较 <a href="#5.8" class="lyref">5.8</a>  孟武伯问子路、冉求、公西华仁乎得到的回答，可以揣摩孔子对于从政者、仁者的期待。</span></span></p></li>
-<li><p><span class="lyterm">达</span>：通达，不顽固闭塞。<span class="lyseealso"><span>【参】</span><span><a href="#12.20" class="lyref">12.20</a> <span class="lyq">夫达也者，质直而好义，察言而观色，虑以下人。</span></span></span></p></li>
-<li><p><span class="lyterm">艺</span>：多才多能。参见<a href="#liuyi">六艺</a>。<span class="lyexample"><span>【例】</span><span><a href="#9.7" class="lyref">9.7</a> <span class="lyq">子云：“吾不试，故艺。”</span></span></span></p></li>
+<li><p><span class="lyterm"><a href="#guo3a">果</a></span>：有决断，坚决，果敢。<span class="lyseealso"><span>【参】</span><span>比较 <a href="#5.8" class="lyref">5.8</a>  孟武伯问子路、冉求、公西华“仁乎”得到的回答，可以揣摩孔子对于从政者、仁者的期待。</span></span></p></li>
+<li><p><a id="da2a"></a><span class="lyterm">达</span>：通达，不顽固闭塞，其本义为行动轻捷自如。<span class="lyseealso"><span>【参】</span><span><a href="#12.20" class="lyref">12.20</a> <span class="lyq">夫达也者，质直而好义，察言而观色，虑以下人。</span></span></span></p></li>
+<li><p><a id="yi4k"></a><span class="lyterm">艺</span>：多才多能。<a href="#14.12" class="lyref">14.12</a>  里孔子再次称赞<span class="lyq">冉求之艺</span>，无怪乎 <a href="#5.8" class="lyref">5.8</a> <span class="lyq">千室之邑，百乘之家，可使为之宰也</span>。参见<a href="#liuyi">六艺</a>。<span class="lyexample"><span>【例】</span><span><a href="#9.7" class="lyref">9.7</a> <span class="lyq">子云：“吾不试，故艺。”</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="6.9"></a><div class="lyblob">
@@ -2434,11 +2434,11 @@ img.characterimg {
 <li><p><a id="ji4"></a><span class="lyterm">济</span>：救助。<span class="lyexample"><span>【例】</span><span>成语“济世救人”。</span></span><span class="lyseealso"><span>【参】</span><span>《孟子·梁惠王下》：<span class="lyq">乐民之乐者，民亦乐其乐；忧民之忧者，民亦忧其忧。乐以天下，忧以天下，然而不<a href="#wangdao">王</a>者，未之有也。</span></span></span></p></li>
 <li><p><span class="lyterm">何事于仁</span>：和仁有什么关系呢，意即怎么能说（只）是仁呢。<span class="lyterm">何事于</span>是用反问结构表示否定，have nothing to do with。</p></li>
 <li>
-<p><a id="sheng4"></a><span class="lyterm">圣</span>：睿智通达、无所不晓的人，引申指道德才能达到超凡境界的人。<span class="lyseealso"><span>【参】</span><span>《尚书·周书·洪范》：<span class="lyq">视曰明，听曰聪，思曰睿。……明作晰，聪作谋，睿作圣。</span>（作：则。）吕本中《童蒙训·卷上》记其祖父吕希哲语：<span class="lyq">惟<a href="#tianzi">天子</a>为能<a href="#bei4a">备</a>物，惟圣人为能备德。</span></span></span></p>
+<p><a id="sheng4"></a><span class="lyterm">圣</span>：睿智通达、无所不晓的人，引申为道德才能达到超凡境界的人。<span class="lyseealso"><span>【参】</span><span>《尚书·周书·洪范》：<span class="lyq">视曰明，听曰聪，思曰睿。……明作晰，聪作谋，睿作圣。</span>（作：则。）吕本中《童蒙训·卷上》记其祖父吕希哲语：<span class="lyq">惟<a href="#tianzi">天子</a>为能<a href="#bei4a">备</a>物，惟圣人为能备德。</span></span></span></p>
 <p>根据孔子之意，<a href="#ren2">仁</a>是凡夫俗子能达到的最高境界，所关爱的范围毕竟有限；圣是更进一步的理想化境界，要做到博施济众，连上古贤君都力有未逮。这就激励着历代儒者在修身向学之外积极投身政治，为大众谋福利。</p>
 <p>儒家经典中，圣一般特指<a href="#yao">尧</a>、<a href="#shun">舜</a>、<a href="#yu">禹</a>、<a href="#tang">汤</a>、<a href="#wen">文</a>、<a href="#wu">武</a>、<a href="#zhougong">周公</a>和孔子，后来又专称孔子为圣人，尊为<span class="lykeyword">至圣先师</span>。</p>
 </li>
-<li><p><span class="lyterm">病</span>：动词，忧虑，担心。<span class="lyexample"><span>【例】</span><span><a href="#15.19" class="lyref">15.19</a> <span class="lyq">君子病无能焉，不病人之不己知也。</span></span></span></p></li>
+<li><p><a id="bing4a"></a><span class="lyterm">病</span>：动词，忧虑，担心。<span class="lyexample"><span>【例】</span><span><a href="#15.19" class="lyref">15.19</a> <span class="lyq">君子病无能焉，不病人之不己知也。</span></span></span></p></li>
 <li><p><span class="lyterm">夫仁者，己欲立而立人，己欲达而达人。</span><a id="fu2"></a><span class="lyterm">夫</span>（<span class="lypinyin">fú</span>）：句首助词，引出一个判断句，用于标明自己的观点。<span class="lyexample"><span>【例】</span><span><a href="#17.21" class="lyref">17.21</a> <span class="lyq">夫三年之丧，天下之通丧也。</span></span></span><span class="lyseealso"><span>【参】</span><span>同治9年（1870年）11月2日曾国藩写给儿子的家书中说：<span class="lyq">孔门教人，莫大于求仁，而其最<a href="#qie4">切</a>者，莫要于欲立立人、欲达达人数语。立者自立不惧，如富人百物有余，不假外求；达者四达不悖，如贵人登高一呼，群山四应。人孰不欲己立己达？若能推以立人达人，则与物同春矣。</span>《圣经·新约·路加福音》6:31：<span class="lyq">你们愿意人怎样待你们，你们也要怎样待人。</span>（<span class="lyqe">And as ye would that men should do to you, do ye also to them likewise.</span>）《圣经·新约·罗马书》13:8—13:9：<span class="lyq">凡事都不可亏欠人，惟有彼此相爱，要常以为亏欠，因为爱人的就完全了律法。像那不可奸淫，不可杀人，不可偷盗，不可贪婪，或有别的诫命，都包在“爱人如己”这一句话之内了。</span>（<span class="lyqe">Owe no man any thing, but to love one another: for he that loveth another hath fulfilled the law. For this, Thou shalt not commit adultery, Thou shalt not kill, Thou shalt not steal, Thou shalt not bear false witness, Thou shalt not covet; and if <em>there be</em> any other commandment, it is briefly comprehended in this saying, namely, Thou shalt love thy neighbour as thyself.</span>）</span></span></p></li>
 <li><p><span class="lyterm">近取譬</span>（<span class="lypinyin">pì</span>）：就近（从自己身上或身旁）举例打比方，也就是推己及人，怀<a href="#ren2">仁</a>厚之心，行<a href="#zhong1">忠</a><a href="#shu4">恕</a>之道。<span class="lyterm">譬</span>：比喻。<span class="lyseealso"><span>【参】</span><span>杜甫《茅屋为秋风所破歌》：<span class="lyq">安得广厦千万间，大庇天下寒士俱欢颜，风雨不动安如山！呜呼！何时眼前突兀见此屋，吾庐独破受冻死亦足！</span></span></span>近取譬是为了能推广于大众。《宋史·吕蒙正传》载，995年元宵夜，宋太宗宴请群臣，忆起五代时战乱频仍，士民恐惧，<span class="lyq">“当时谓无复太平之日矣。朕躬览庶政，万事粗理，每念上天之贶，致此繁盛，乃知理乱在人。”</span>（贶（<span class="lypinyin">kuàng</span>）：赐。）正当宋太宗自我感觉良好时，<span class="lyq">蒙正避席曰：“乘舆所在，士庶走集，故繁盛如此。臣尝见都城外不数里，饥寒而死者甚众，不必尽然。愿陛下视近以及远，苍生之幸也。”</span>（乘<a href="#yu2b">舆</a>：特指天子的车乘。）</p></li>
 <li><p><a id="fang1"></a><span class="lyterm">方</span>：方法，途径。</p></li>
@@ -2934,9 +2934,9 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#8.10">8.10</a></div>
 <div class="lybloboriginaltext"><p>子曰：“好勇疾贫，乱也。人而不仁，疾之已甚，乱也。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><a id="ji2"></a><span class="lyterm">疾</span>：痛恨，厌恶，本义为轻病。<span class="lyexample"><span>【例】</span><span><a href="#16.1" class="lyref">16.1</a> <span class="lyq">君子疾夫舍曰“欲之”而必为之辞。</span>成语“深恶痛疾”。</span></span></p></li>
-<li><p><span class="lyterm">乱也</span>：指这是乱的苗头，要出乱子了。<span class="lyseealso"><span>【参】</span><span><a href="#8.2" class="lyref">8.2</a> </span></span></p></li>
-<li><p><span class="lyterm">已甚</span>：太过分。<span class="lyexample"><span>【例】</span><span>成语“不为已甚”指做事不应太过分，要适可而止。</span></span><span class="lyseealso"><span>【参】</span><span><a href="#11.16" class="lyref">11.16</a> 。《四书集注》：<span class="lyq">二者之心善恶虽殊，然其生乱则一也。</span>苏轼《刑赏忠厚之至论》：<span class="lyq">《<a href="#shangshu">书</a>》曰：“罪疑惟轻，功疑惟重。与其杀不辜，宁失不经。”呜呼，尽之矣！可以赏，可以无赏，赏之过乎<a href="#ren2">仁</a>；可以罚，可以无罚，罚之过乎<a href="#yi4">义</a>。过乎仁，不失为君子；过乎义，则流而入于<a href="#ren3">忍</a>人。故仁可过也，义不可过也。</span>（引文出自《尚书·虞夏书·大禹谟》（伪），是<a href="#gaoyao">皋陶</a>回答<a href="#shun">舜帝</a>的话，其中还有：<span class="lyq"><a href="#6.2">临下以简</a>，<a href="#3.26">御众以宽</a>。……好生之德洽于民心，<a href="#shiyong">兹用</a>不犯于<a href="#yousi">有司</a></span>。不经：不合常法。流：变。）</span></span></p></li>
+<li><p><a id="ji2"></a><span class="lyterm">疾</span>：痛恨，厌恶。从本义来看，疾是轻病，<a href="#bing4a">病</a>是重病，<span class="lyq">疾加也</span>（《说文解字》），二者都从名词疾病引申为动词担心；而<a href="#huan4">患</a>是从动词担心引申至名词疾病。<span class="lyexample"><span>【例】</span><span><a href="#16.1" class="lyref">16.1</a> <span class="lyq">君子疾夫舍曰“欲之”而必为之辞。</span>成语“深恶痛疾”。</span></span></p></li>
+<li><p><span class="lyterm">乱也</span>：指这是乱的苗头，要出乱子了。<span class="lyseealso"><span>【参】</span><span><a href="#8.2" class="lyref">8.2</a> <span class="lyq">勇而无礼则乱。</span></span></span></p></li>
+<li><p><span class="lyterm">已甚</span>：太过分。<span class="lyexample"><span>【例】</span><span>成语“不为已甚”指做事不应太过分，要适可而止。</span></span><span class="lyseealso"><span>【参】</span><span><a href="#11.16" class="lyref">11.16</a> <span class="lyq">过犹不及。</span>《四书集注》：<span class="lyq">二者之心善恶虽殊，然其生乱则一也。</span>苏轼《刑赏忠厚之至论》：<span class="lyq">《<a href="#shangshu">书</a>》曰：“罪疑惟轻，功疑惟重。与其杀不辜，宁失不经。”呜呼，尽之矣！可以赏，可以无赏，赏之过乎<a href="#ren2">仁</a>；可以罚，可以无罚，罚之过乎<a href="#yi4">义</a>。过乎仁，不失为君子；过乎义，则流而入于<a href="#ren3">忍</a>人。故仁可过也，义不可过也。</span>（引文出自《尚书·虞夏书·大禹谟》（伪），是<a href="#gaoyao">皋陶</a>回答<a href="#shun">舜帝</a>的话，其中还有：<span class="lyq"><a href="#6.2">临下以简</a>，<a href="#3.26">御众以宽</a>。……好生之德洽于民心，<a href="#shiyong">兹用</a>不犯于<a href="#yousi">有司</a></span>。不经：不合常法。流：变。）</span></span></p></li>
 </ul></div>
 </div>
 <a id="8.11"></a><div class="lyblob">
@@ -3923,8 +3923,8 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">闻斯行诸？</span>：听到了（一个道理）就应该（赶紧）去做吗？</p></li>
 <li><p><span class="lyterm">有父兄在</span>：意思是应该先请示父兄的意见，多考虑他们的需要和感受。</p></li>
-<li><p><span class="lyterm">退</span>：指畏缩，做事容易打退堂鼓。<span class="lyseealso"><span>【参】</span><span><a href="#6.12" class="lyref">6.12</a> </span></span></p></li>
-<li><p><span class="lyterm">兼人</span>：一人抵多人，这里是指子路勇于进取，果敢好胜。另外也可以形容勇力过人。<span class="lyexample"><span>【例】</span><span>《汉书·韩信传》：<span class="lyq">受辱于跨下，无兼人之勇，不足畏也。</span>（跨：通“胯”。）</span></span><span class="lyseealso"><span>【参】</span><span><a href="#5.14" class="lyref">5.14</a> <a href="#12.12" class="lyref">12.12</a> </span></span></p></li>
+<li><p><span class="lyterm">退</span>：指畏缩，做事容易打退堂鼓。<span class="lyseealso"><span>【参】</span><span>冉求以<a href="#yi4k">艺</a>著称，会得多了，是不是就容易心事重、顾虑多、<span class="lyq">巧者劳而知者忧</span>（《庄子·列御寇》）呢？能反映冉求这方面性格的例子如：<a href="#6.12" class="lyref">6.12</a> <span class="lyq">冉求曰：“非不说子之道，力不足也。”</span><a href="#3.6" class="lyref">3.6</a> <span class="lyq">子谓冉有曰：“女弗能救与？”对曰：“不能。”</span><a href="#13.14" class="lyref">13.14</a> <span class="lyq">子曰：“何晏也？”对曰：“有政。”</span></span></span></p></li>
+<li><p><span class="lyterm">兼人</span>：一人抵多人，这里是指子路勇于进取，果敢好胜。另外也可以形容勇力过人。<span class="lyexample"><span>【例】</span><span>《汉书·韩信传》：<span class="lyq">受辱于跨下，无兼人之勇，不足畏也。</span>（跨：通“胯”。）</span></span><span class="lyseealso"><span>【参】</span><span>孔子曾说子路 <a href="#5.7" class="lyref">5.7</a> <span class="lyq">好勇过我</span>、<a href="#6.8" class="lyref">6.8</a> <span class="lyq">由也果</span>、<a href="#11.18" class="lyref">11.18</a> <span class="lyq">由也喭</span>。能反映子路这方面性格的例子很多，比如 <a href="#12.12" class="lyref">12.12</a> <span class="lyq">片言可以折狱</span>、<span class="lyq">无宿诺</span>，<a href="#11.26" class="lyref">11.26</a> <span class="lyq">率尔而对</span>，问孔子 <a href="#17.23" class="lyref">17.23</a> <span class="lyq">君子尚勇乎？</span><a href="#7.11" class="lyref">7.11</a> <span class="lyq">子行三军，则谁与？</span>也包括 <a href="#15.2" class="lyref">15.2</a> <span class="lyq">子路愠</span>、<a href="#6.28" class="lyref">6.28</a> <a href="#17.5" class="lyref">17.5</a> <span class="lyq">子路不说</span>，以及说孔子 <a href="#13.3" class="lyref">13.3</a> <span class="lyq">子之迂也</span>等等。</span></span></p></li>
 </ul></div>
 </div>
 <a id="11.23"></a><div class="lyblob">
@@ -4221,12 +4221,12 @@ img.characterimg {
 </div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
-<p><a id="da2"></a><span class="lyterm">达</span>：通，指得人望而做事顺遂。后来引申为得志，有名望地位。<span class="lyseealso"><span>【参】</span><span><a href="#13.20" class="lyref">13.20</a> <a href="#13.28" class="lyref">13.28</a> ，<a href="#zigong">子贡</a>与<a href="#zilu">子路</a>问士。</span></span></p>
-<p><a id="wen2a"></a><span class="lyterm">闻</span>：有名声。和“达”相比，它是外在的表现。</p>
+<p><a id="da2"></a><span class="lyterm"><a href="#da2a">达</a></span>：通，指得人望而做事顺遂。后来引申为得志，有名望地位。<span class="lyterm">质直而好义，察言而观色，虑以下人</span>是达者为人处世的品质，才会有<span class="lyterm">在邦必达，在家必达</span>的好结果，这里用破折号来表示。达的反义词是<a href="#qiong2">穷</a>。<span class="lyexample"><span>【例】</span><span>成语“通权达变”、“达官贵人”。</span></span><span class="lyseealso"><span>【参】</span><span><a href="#13.20" class="lyref">13.20</a> <a href="#13.28" class="lyref">13.28</a> ，<a href="#zigong">子贡</a>与<a href="#zilu">子路</a>问士。<a href="#zigong">子贡</a>能 <a href="#11.19" class="lyref">11.19</a> <span class="lyq">不受命而货殖焉，亿则屡中</span>，是孔子认可的<a href="#6.8">达人</a>。《大戴礼记·曾子制言上》载，曾子的弟子也问他<span class="lyq">士何如则可以为达</span>，曾子以“穷”作对比：<span class="lyq">今之<a href="#dizi">弟子</a>，<a href="#bing4a">病</a><a href="#xiaren">下人</a>，不知<a href="#shi4f">事</a>贤，耻不知而又不问，欲作则其知不足，是以惑暗。惑暗终其世而已矣，是谓穷民也。</span></span></span></p>
+<p><a id="wen2a"></a><span class="lyterm">闻</span>：有名声。和“达”相比，它是外在的表现。<span class="lyseealso"><span>【参】</span><span><a href="#14.44" class="lyref">14.44</a> <span class="lyq">非求益者也，欲速成者也。</span>《论语义疏》引晋人缪协语：<span class="lyq">闻者，达之名，达者，闻之实。而殉为名者众，体实者寡，故利名者饰伪，敦实者归真。是以名分于闻，而道隔于达也。</span>（殉：谋求。）</span></span></p>
 </li>
 <li><p><span class="lyterm">在<a href="#bang1">邦</a></span>指在朝廷为官，<span class="lyterm">在<a href="#jia1">家</a></span>指在卿大夫家做家臣。</p></li>
-<li><p><a id="lvyixiaren"></a><span class="lyterm">虑<a href="#yi3a">以</a>下人</span>：（遇事）多考虑，多谦让。<span class="lyterm">下人</span>：（甘愿）位居他人之下，<span class="lyterm">下</span>是动词。<span class="lyexample"><span>【例】</span><span>《三国志·蜀书·先主备》形容刘备<span class="lyq">少语言，善下人，喜怒不形于色。</span></span></span></p></li>
-<li><p><span class="lyterm">居之不疑</span>：安于自己的处境、地位而不起疑虑，这里指伪善得连自己都相信了。</p></li>
+<li><p><a id="lvyixiaren"></a><span class="lyterm">虑<a href="#yi3a">以</a>下人</span>：（遇事）多考虑，多谦让。<a id="xiaren"></a><span class="lyterm">下人</span>：（甘愿）位居他人之下，<span class="lyterm">下</span>是动词。<span class="lyexample"><span>【例】</span><span>成语“礼贤下士”（礼也是动词）。《三国志·蜀书·先主备》说刘备<span class="lyq">少语言，善下人，喜怒不形于色。</span></span></span></p></li>
+<li><p><span class="lyterm">居之不疑</span>：安于自己的处境、地位而不起疑虑，这里是指伪善得连自己都相信了。</p></li>
 </ul></div>
 </div>
 <a id="12.21"></a><div class="lyblob">
@@ -4426,7 +4426,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p><a href="#ranqiu">冉子</a>退朝。子曰：“何晏也？”对曰：“有政。”子曰：“其事也。如有政，虽不吾以，吾其与闻之。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">晏</span>（<span class="lypinyin">yàn</span>）：晚，迟。<span class="lyexample"><span>【例】</span><span>陆游《寓叹》：<span class="lyq">老生读书百<a href="#weibiansanjue">绝编</a>，日晏忘食夜废眠。</span></span></span></p></li>
-<li><p><span class="lyterm"><a href="#qi2a">其</a>事也</span>：恐怕是（季氏的）家事吧。政是国政，事是私事，这是孔子讽刺季氏公私不分，操持权柄。</p></li>
+<li><p><span class="lyterm"><a href="#qi2a">其</a>事也</span>：恐怕是（季氏的）家事吧。政是国政，事是私事，这是孔子讽刺季氏公私不分，操持权柄，也包含对冉求言不由衷的批评。</p></li>
 <li><p><span class="lyterm">不吾以</span>：“<a href="#nov">NOV</a>”的倒装结构，不用我（当官）了。<a id="yi3"></a><span class="lyterm">以</span>：动词，任用，使用。</p></li>
 </ul></div>
 </div>
@@ -4842,7 +4842,7 @@ img.characterimg {
 <li>
 <p><span class="lyterm">“告<a href="#fu2b">夫</a>三子”者</span>。<a id="sanzi"></a><span class="lyterm">三子</span>指<a href="#sanhuan">三桓</a>的宗主，他们是当时鲁国真正的掌权人物。<span class="lyterm">者</span>：句末语气词，可以表示感叹、祈使、反问、推测等。这句话包含了孔子愤激的心情。<span class="lyexample"><span>【例】</span><span>《史记·项羽本纪》：<span class="lyq">富贵不归故乡，如衣绣夜行，谁知之者！</span></span></span></p>
 <p>弱鲁难讨强齐，孔子出于大义不得不告，并认为未必不堪一战：<span class="lyq">陈恒弑其君，民之不<a href="#yu3a">与</a>者半。以鲁之众，加齐之半，可克也。</span>（《左传·哀公十四年》。）但按孔子的主张，三桓是讨不到实利的，且也早有不臣之心，当然会置若罔闻了。</p>
-<p>终孔子一生，齐国变乱迭起，经历<a href="#cuizhu">庄</a>、<a href="#qijinggong">景</a>、悼、简、平5任国君和1位被弑的幼君，事见《左传·哀公十四年》、《史记·齐太公世家》、《史记·田敬仲完世家》。中国历来特别<a href="#koushi">忌讳</a>弑上篡权的行为，田恒弑简公与78年之后的<a href="#sanjiafenjin">三家分晋</a>遥相呼应，不仅是典型的以下犯上，而且得到当时周天子的容忍甚至承认，象征着主流价值观与社会秩序的大变动。同年春，鲁人西狩获麟，《春秋》绝笔，2年后孔子就去世了。</p>
+<p>终孔子一生，齐国变乱迭起，经历<a href="#cuizhu">庄</a>、<a href="#qijinggong">景</a>、悼、简、平5任国君和1位被弑的幼君，事见《左传·哀公十四年》、《史记·齐太公世家》、《史记·田敬仲完世家》。中国历来特别<a href="#koushi">忌讳</a>弑上篡权的行为，田恒弑简公与78年之后的<a href="#sanjiafenjin">三家分晋</a>遥相呼应，不仅是典型的以下犯上，还得到当时周天子的容忍甚至认可，象征着主流价值观与社会秩序的大变动。同年春，鲁人西狩获麟，《春秋》绝笔，2年后孔子就去世了。</p>
 </li>
 </ul></div>
 </div>
@@ -6606,7 +6606,7 @@ img.characterimg {
 <p>每条译用一个圆点•开头，需要解释的原文显示为<span class="lyterm">这样</span>，注解中的关键词显示为<span class="lykeyword">这样</span>。注解一般按原文中出现的顺序排列，偶尔也会稍微调整前后位置，或者把有关联的几处合并为一条。注解一般宁详勿略，经常会追溯到字的本义。连续用几个词进行解释的，通常是从自身的含义延伸到上下文里的特定含义，可以留意其中的细微差别。用“指”标出的，总是上下文里的含义。在我感觉“刚好合适”的地方，还会用简单的英语作注。如果遇到难字没有解释，应该是前面已经解释过了，可以从头搜索一下。</p>
 <p>比较浅显易懂的章节不带评。有的评直接连在注解之后，有的放在整章末尾，前面不加圆点。少数个人想法较多的评，就用横线隔开。总之是以看着直观、读着通顺为准。</p>
 <p>没有了逐句翻译，省掉的篇幅就用来进一步解释原文，我称之为“例参体”。我上学的时候，不太喜欢直接相信字典里的解释，总要找到一个用法相同的典型例子才放心。很多注解的后面，就附上了这类例证，用【例】醒目地标出。为了更好地理解原文的某句话或者一整章的意义，还用【参】补充了一些值得对照的观点，也包括辅助性的背景知识。字词用法上的例证尽量引用《论语》后文，作为预习；观点上的参考尽量引用《论语》前文，作为复习，除非遇到关键的概念，或者值得辨析的情况。例、参引用的原文片段，显示为<span class="lyq">这样</span>，前后不加引号。引文中如果遇到难字，就在随后的（）里加上简注。引文中的省略号，除非另有说明，都是对原文的节略。引文<span class="lyq">〔〕</span>里的话，是对原文的补充说明。</p>
-<p>例、参中的引用，大部分是文言文。除了《论语》章句之间的参照印证以外，它们有的支持或强化了《论语》的观点，有的稍有差异，也有的针锋相对。对于喜欢独立思考的读者，这种参差碰撞似乎比“纯净化”更有营养。但它受限于我的阅读范围，在本书维护过程中，我会随时把更合适的内容增补进来。古义今用是我比较留意的情况，有时也会用现代汉语的成语和常用词作为例证。另外还引用了少量英文材料，大都提供了汉语译文。其中，《圣经》英文采用英王钦定本（<em>King James Bible</em>），中文采用和合本；其它除了标明译者的几处，都是我翻译的。</p>
+<p>例、参中的引用，大部分是文言文。除了《论语》章句之间的参照印证以外，它们有的支持或强化了《论语》的观点，有的稍有差异，也有的针锋相对。对于喜欢独立思考的读者，这种参差碰撞似乎比“纯净化”更有营养。但它受限于我的阅读范围，在本书维护过程中，我会随时把更合适的内容增补进来。古义今用是我比较留意的情况，有时也会用现代汉语的成语和常用词作为例证。特别是成语，既保留了古汉语中的含义，又有很强的现代生命力，应该是比较合适的切入点。另外还引用了少量英文材料，大都提供了汉语译文。其中，《圣经》英文采用英王钦定本（<em>King James Bible</em>），中文采用和合本；其它除了标明译者的几处，都是我翻译的。</p>
 <p>可是过犹不及，补充材料太多，会有明显的不平衡感，也影响对原文的专注。<strong>建议始终把理解原文放在首位</strong>，额外的内容不妨选读。尤其对那些概括总结性的话，更应该有鉴别地看待。</p>
 <p>注解中还包含一些语法方面的内容。中国古代强调熟读成诵、文义自达，不太重视形式化规则，汉语语法是清末开始受西方影响才逐渐建立的。语法很实用，但汉语（包括古汉语）自有其特点，比如往往一个字就是一个词，词性又灵活多变，名词、动词、形容词、副词等等左右逢源，不像英语那样有明确的对错之分。所以，既要善用语法的分析能力，也应该知道，目前的语法体系还未能完善地概括汉语的特征。</p>
 <p>本书采用了很多超链接，这是电子版的一大优势，可以更好地形成概念网络。比如，有时单解释一个词感觉不够到位，还会链接到它更基本的含义。要有效使用本书，先要熟悉跳来跳去的操作，在跳之前要留意当前位置，浏览器也应该有后退、前进的功能。使用的超链接主要有3种样式：圆角小框跳转到某章开头，例如 <a href="#1.1" class="lyref">1.1</a> ；<a href="#junzi">这样</a>的跳转到本书内的某个位置；<a href="http://www.abolybook.org/" class="lyurl" target="_blank">这样</a>的打开外部网址链接。</p>
@@ -6624,7 +6624,7 @@ img.characterimg {
 <a id="usage-plan"></a><h2>计划中</h2>
 <p>本书是用业余时间断续撰写的，有很多明显可以改进的地方。下面列出来的，我会细水长流地改进，未知的问题，就需要大家的智慧与帮助。谢谢！</p>
 <ul>
-<li><p> 各章之间的联系比较散乱，需要仔细梳理。主题索引也应该更有条理。补充参考材料中没来及写的点评。</p></li>
+<li><p> 各章之间的联系还较散乱，需要仔细梳理。主题索引也应该更有条理。补充参考材料中没来及写的点评。</p></li>
 <li><p> 正文之前会增加一篇导言，介绍孔子的生平和影响，不少章的历史背景就有了着落。我对它的期望很高，希望不会篇幅太长。</p></li>
 <li><p> 持续改进“评”的部分。</p></li>
 <li><p> 配上适当的插图，代码中已经标出了若干处。我很羡慕画画好的人，封面的设计很大程度上是藏拙的办法。这个只能慢慢来。</p></li>
