--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@ window.onload = function() {
 </div>
 
 <ul>
-<li>《一瓶论语》、《论语》PDF版：<a href="https://github.com/abolybook/aboly/releases" target="_blank">GitHub下载</a>，<a href="https://pan.baidu.com/s/1eRp6vMq#list/path=%2Faboly" target="_blank">百度网盘备份</a></li>
+<li>《一瓶论语》、《论语》PDF版下载：<a href="https://github.com/abolybook/aboly/releases" target="_blank">GitHub</a>，<a href="https://pan.baidu.com/s/1eRp6vMq#list/path=%2Faboly" target="_blank">百度网盘</a></li>
 <li>《论语》TTS有声版：<br>
 <audio src="https://github.com/abolybook/ly-tts/releases/download/v0.3.0d/ly-tts.mp3" controls="controls">
 哎呀，你的浏览器不支持直接播放MP3，请试试最新版的Chrome或者Firefox浏览器吧。
 </audio><br>
-<a href="https://github.com/abolybook/ly-tts/releases" target="_blank">GitHub下载</a>，
-<a href="https://pan.baidu.com/s/1geWmf9D#list/path=%2Fly-tts" target="_blank">百度网盘备份</a>
+下载：<a href="https://github.com/abolybook/ly-tts/releases" target="_blank">GitHub</a>，<a href="https://pan.baidu.com/s/1geWmf9D#list/path=%2Fly-tts" target="_blank">百度网盘</a>
 </li>
 </ul>
 
