--- a/aboly.html
+++ b/aboly.html
@@ -2018,7 +2018,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子在陈，曰：“归与！归与！吾党之小子狂简，斐然成章，不知所以裁之。”</p></div>
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
-<li><p><span class="lyterm">吾党之小子</span>：我家乡的后生们，实指留在故乡鲁国，未跟随孔子漂泊四方的弟子们。<a id="dang3"></a><span class="lyterm">党</span>：按周制，500家为党。</p></li>
+<li><p><span class="lyterm">吾党之小子</span>：我家乡的后生们，实指留在故乡鲁国，未能跟随孔子漂泊四方的那些弟子。<a id="dang3"></a><span class="lyterm">党</span>：按周制，500家为党。</p></li>
 <li><p><span class="lyterm">狂简</span>：志大勇为，而做事不拘小节。<span class="lyterm">简</span>：指做事粗疏草率，不细致周到。</p></li>
 <li><p><span class="lyterm">斐（<span class="lypinyin">fěi</span>）然成章</span>：已经形成光彩绚丽的花纹图案了，这里是用布匹上的美丽花纹来比喻弟子已经取得了可观的成绩。<span class="lyterm">斐</span>：五彩交错。<a id="zhang1"></a><span class="lyterm">章</span>：彩色，花纹。<span class="lyexample"><span>【例】</span><span>《孟子·尽心上》：<span class="lyq">君子之志于道也，不成章不<a href="#da2">达</a>。</span>成语“斐然成章”指写出来的文章富有文采。</span></span></p></li>
 <li><p><span class="lyterm">裁</span>：剪裁，这是接着“斐然成章”的比喻，指引导，教正。孔子对学生们既感欣慰又怀隐忧的心情跃然纸上。</p></li>
@@ -2233,7 +2233,7 @@ img.characterimg {
 <a id="6.11"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#6.11">6.11</a></div>
 <div class="lybloboriginaltext"><p>子曰：“贤哉<a href="#yanhui">回</a>也！一箪食，一瓢饮，在陋巷，人不堪其忧，回也不改其乐。贤哉回也！”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">箪</span>（<span class="lypinyin">dān</span>）：古代盛饭食用的竹器。后来有成语“箪食瓢饮”，形容人安心于物质简朴（而精神富足）的生活。</p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">箪</span>（<span class="lypinyin">dān</span>）：古代盛饭食用的竹器。<span class="lyterm">饮</span>：水。后来有成语“箪食瓢饮”，形容人安心于物质简朴（而精神富足）的生活。</p></li></ul></div>
 </div>
 <a id="6.12"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#6.12">6.12</a></div>
@@ -2606,7 +2606,10 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#7.16">7.16</a></div>
 <div class="lybloboriginaltext"><p>子曰：“饭疏食饮水，曲肱而枕之，乐亦在其中矣。不义而富且贵，于我如浮云。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><a id="shushi"></a><span class="lyterm">饭疏食</span>：吃粗糙的饭。<span class="lyterm">疏</span>：粗，不精细。<span class="lyexample"><span>【例】</span><span>成语“志大才疏”。</span></span><span class="lyseealso"><span>【参】</span><span><a href="#6.11" class="lyref">6.11</a> </span></span></p></li>
+<li>
+<p><a id="shushi"></a><span class="lyterm">饭疏食</span>：吃粗糙的饭。<span class="lyterm">疏</span>：粗，不精细，与 <a href="#10.8" class="lyref">10.8</a> <span class="lyq">食不厌精</span>的“精”相对。<span class="lyexample"><span>【例】</span><span>成语“志大才疏”。</span></span></p>
+<p>如果<span class="lyterm">食</span>特指谷类主食，<span class="lyterm">疏食</span>就是高纤维难消化的糙米饭、高粱饭等。<span class="lyseealso"><span>【参】</span><span><a href="#6.11" class="lyref">6.11</a> <span class="lyq">一箪食，一瓢饮，在陋巷，人不堪其忧，回也不改其乐。</span></span></span></p>
+</li>
 <li><p><a id="gong1b"></a><span class="lyterm">肱</span>（<span class="lypinyin">gōng</span>）：上臂，泛指胳膊。</p></li>
 <li>
 <p><span class="lyterm">浮云</span>随风飘荡，含有转瞬即逝、不可靠、不值得、不屑为等意味，可以自行体会。</p>
@@ -3394,7 +3397,8 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
 <p><span class="lyterm">唐棣（<span class="lypinyin">dì</span>）之华（<span class="lypinyin">huā</span>）</span> 4句诗的意思是：唐棣的花朵啊，摇曳翻转，怎能不思念你呀，（可是）离家太远。其出处已不可考，《论语注疏》、《四书集注》都说是《<a href="#shijing">诗经</a>》的逸诗，古注多认为是表达思慕贤人之情。</p>
-<p><a id="hua1"></a><span class="lyterm">华</span>：通“花”。<a id="tangdi"></a><span class="lyterm">唐棣</span>：也写作棠棣，学名为郁李，蔷薇科灌木，春季开桃红色花。<span class="lyseealso"><span>【参】</span><span>《诗经·小雅·常棣》开头用花朵与花萼的依托映衬来比拟兄弟亲情：<span class="lyq">常棣之华，鄂不韡韡。凡今之人，莫如兄弟。</span>（不：通“柎”（<span class="lypinyin">fū</span>），花萼的足。韡（<span class="lypinyin">wěi</span>）：光彩鲜明。）后来就常以棠棣比喻手足兄弟。</span></span></p>
+<p><a id="hua1"></a><span class="lyterm">华</span>：“花”的本字，繁体为華。<span class="lyexample"><span>【例】</span><span>鲁迅的散文集《朝花夕拾》，1928年初版的自定名为《朝華夕拾十篇》。</span></span></p>
+<p><a id="tangdi"></a><span class="lyterm">唐棣</span>：也写作棠棣，学名为郁李，蔷薇科灌木，春季开桃红色花。<span class="lyseealso"><span>【参】</span><span>《诗经·小雅·常棣》开头用花朵与花萼的依托映衬来比拟兄弟亲情：<span class="lyq">常棣之华，鄂不韡韡。凡今之人，莫如兄弟。</span>（不：通“柎”（<span class="lypinyin">fū</span>），花萼的足。韡（<span class="lypinyin">wěi</span>）：光彩鲜明。）后来就常以棠棣比喻手足兄弟。</span></span></p>
 <p><a id="er2"></a><span class="lyterm">而</span>：无意义的句末助词，又可以表示感叹。<span class="lyexample"><span>【例】</span><span><a href="#18.5" class="lyref">18.5</a> <span class="lyq">已而，已而，今之从政者殆而！</span></span></span></p>
 <p><span class="lyterm">偏其反而</span>：喻指（本应欢聚却）相远离。<span class="lyseealso"><span>【参】</span><span>《诗经·小雅·角弓》讲兄弟亲情：<span class="lyq">骍骍角弓，翩其反矣。兄弟昏姻，无胥远矣。</span>（骍骍：形容弓已调理得灵便称手。翩其反矣：指张弓放箭时角弓两端由近而远。昏姻：指亲戚。胥：相互。）由此看来，把本章的4句诗理解为思念兄弟，由实指上升到思贤、思仁，也说得通。</span></span></p>
 <p><span class="lyterm">是</span>：副词，用在单音节形容词谓语之前，强化了形容的效果，相当于如此，这样，so，this。<span class="lyexample"><span>【例】</span><span><a href="#20.1" class="lyref">20.1</a> <span class="lyq">周有大赉，善人是富。</span>《诗经·小雅·南山有台》：<span class="lyq">乐只君子，德音是茂。</span>（<a id="zhi1a"></a>只：语气词，相当于呀，呵。德音：善言。）</span></span></p>
@@ -3505,16 +3509,16 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#10.8">10.8</a></div>
 <div class="lybloboriginaltext"><p>食不厌精，脍不厌细。食饐而餲，鱼馁而肉败，不食；色恶，不食；臭恶，不食；失饪，不食；不时，不食；割不正，不食；不得其酱，不食。肉虽多，不使胜食气。唯酒无量，不及乱。沽酒市脯，不食。不撤姜食，不多食。</p></div>
 <div class="lyblobannotation">
-<p>本章承接上一章，讲的是斋戒时的要求，并不是总得如此讲究。</p>
+<p>本章承接上一章，讲的是斋祭中的要求，并不是日常也如此讲究。<span class="lyseealso"><span>【参】</span><span><a href="#8.21" class="lyref">8.21</a> <span class="lyq">菲饮食而致孝乎鬼神。</span></span></span></p>
 <ul class="lyblobitemize">
-<li><p><span class="lyterm">脍</span>（<span class="lypinyin">kuài</span>）：切细的肉食。</p></li>
+<li><p><span class="lyterm">脍</span>（<span class="lypinyin">kuài</span>）：切细的肉。</p></li>
 <li>
-<p><span class="lyterm">饐</span>（<span class="lypinyin">yì</span>）：食物因久放而腐臭。<span class="lyterm">餲</span>（<span class="lypinyin">ài</span>）：食物因久放而滋味变坏。</p>
-<p><span class="lyterm">馁</span>：鱼肉腐坏。<span class="lyterm">败</span>：腐烂，变质。</p>
+<p><span class="lyterm">饐</span>（<span class="lypinyin">yì</span>）：食物因久放而发臭。<span class="lyterm">餲</span>（<span class="lypinyin">ài</span>）：食物因久放而滋味变差。古注对二者的区别莫衷一是，这里采用皇侃的解释，视为臭了和不香了。</p>
+<p><span class="lyterm">馁</span>：鱼肉腐坏。<span class="lyterm">败</span>：腐烂变质。</p>
 </li>
 <li>
 <p><span class="lyterm">失饪</span>（<span class="lypinyin">rèn</span>）：没煮好，火候不佳。<span class="lyterm">饪</span>：煮熟。</p>
-<p><span class="lyterm">不时</span>：时间不适宜，指瓜果蔬菜未熟、过老、不当令等等。</p>
+<p><span class="lyterm">不时</span>：时间不适宜，说的是瓜果蔬菜未熟、过老、不当令等等。</p>
 <p><span class="lyterm">割不正</span>：指牲肉的分割不合规范。《仪礼·特牲馈食礼》、《仪礼·少牢馈食礼》记载了祭祀所用的牲体应该怎样分解，各部分如何截割、烹煮、使用等方面。</p>
 </li>
 <li><p><span class="lyterm">肉虽多，不使<a href="#sheng4b">胜</a>食气</span>：就算供应很多肉，也不要吃过量，使肥甘厚味压倒谷菜之气。<span class="lyseealso"><span>【参】</span><span>清代徐文弼《寿世传真·修养宜饮食调理》：<span class="lyq">谷粟<a href="#shu1">菽</a>麦，自然冲和之味，有益人补阴之功。……若人之所为者，皆烹饪偏厚之味，有致疾伤命之虞。……茹淡者安，啖厚者危。……厚不如薄，多不如少，虑患而谨节之，畏危而坚忍之，举匕箸如<a href="#jing3">儆</a>戈矛，不与肉食者同其陷溺，宁负我生之腹，不负生我之天，是亦卫生之一道也。</span>（虞：忧。茹：吃。匕：相当于汤匙。箸（<span class="lypinyin">zhù</span>）：筷子。卫生：养生。）</span></span></p></li>
