--- a/aboly.html
+++ b/aboly.html
@@ -1468,13 +1468,13 @@ img.characterimg {
 <div class="lybloboriginaltext"><p><a href="#aigong">哀公</a>问社于<a href="#zaiyu">宰我</a>，宰我对曰：“夏后氏以松，殷人以柏，周人以栗，曰‘使民战栗’。”子闻之，曰：“成事不说，遂事不谏，既往不咎。”</p></div>
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
-<li><p><span class="lyterm">社</span>：土地神，这里指土地神的木制牌位。</p></li>
+<li><p><span class="lyterm">社</span>：土地神，这里指土地神的木制牌位，也叫神主。</p></li>
 <li><p><span class="lyterm">夏后氏</span>：指<a href="#xiachao">夏朝</a>人。</p></li>
 <li><p><a id="yue1a"></a><span class="lyterm">曰‘使民战栗’</span>里的<span class="lyterm">曰</span>，意思是称为，叫做，说法是。</p></li>
-<li><p><span class="lyterm">遂事不谏</span>（<span class="lypinyin">jiàn</span>）：已经结束的事，就不再挽回了。<a id="sui4"></a><span class="lyterm">遂</span>：完成，终结。<a id="jian4c"></a><span class="lyterm">谏</span>：本义为下对上的规劝，引申为挽回，纠正。<span class="lyexample"><span>【例】</span><span>陶潜《归去来兮辞》：<span class="lyq">悟已往之不谏，知来者之可追。</span></span></span></p></li>
-<li><p><span class="lyterm">既往不咎</span>（<span class="lypinyin">jiù</span>）：已经过去的事，就不再责怪了。<a id="jiu4"></a><span class="lyterm">咎</span>：本义为灾祸，用作动词，责怪，追究罪责。成语“既往不咎”指将过去犯下的错误一笔勾销，不再追究。</p></li>
+<li><p><span class="lyterm">遂事不谏</span>（<span class="lypinyin">jiàn</span>）：已经结束的事，就不要去挽回了。<a id="sui4"></a><span class="lyterm">遂</span>：完成，终结。<a id="jian4c"></a><span class="lyterm">谏</span>：本义为下对上的规劝，引申为挽回，纠正。<span class="lyexample"><span>【例】</span><span>陶潜《归去来兮辞》：<span class="lyq">悟已往之不谏，知来者之可追。</span>（不可挽回，can't，而前者意在 don't，所以加了个“要”。）</span></span></p></li>
+<li><p><span class="lyterm">既往不咎</span>（<span class="lypinyin">jiù</span>）：已经过去的事，就不要再责怪了。<a id="jiu4"></a><span class="lyterm">咎</span>：本义为灾祸，用作动词，责怪，追究罪责。成语“既往不咎”指将过去犯下的错误一笔勾销，不再追究。</p></li>
 </ul>
-<p>孔子对宰予的批评，在于“使民战栗”上。君子<a href="#13.21">有所为有所不为</a>，与人君对答不可不慎，应多劝以仁政爱民，而不是充当直筒子背书的<a href="#2.12">机器</a>。</p>
+<p>孔子对宰予的批评，在于“使民战栗”上。君子<a href="#13.21">有所为有所不为</a>，与人君对答不可不慎，应多劝以仁政爱民，而不是充当直筒子背书的<a href="#2.12">机器</a>。<span class="lyseealso"><span>【参】</span><span>清代方观旭《论语偶记》：<span class="lyq">宰我因社主之义而起哀公威民之心。</span></span></span></p>
 </div>
 </div>
 <a id="3.22"></a><div class="lyblob">
@@ -2019,7 +2019,7 @@ img.characterimg {
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
 <li><p><span class="lyterm">吾党之小子</span>：我家乡的后生们，实指留在故乡鲁国，未能跟随孔子漂泊四方的那些弟子。<a id="dang3"></a><span class="lyterm">党</span>：按周制，500家为党。</p></li>
-<li><p><span class="lyterm">狂简</span>：志大勇为，而做事不拘小节。<span class="lyterm">简</span>：指做事粗疏草率，不细致周到。</p></li>
+<li><p><span class="lyterm">狂简</span>：志大勇为，而做事不拘小节。<span class="lyterm">简</span>：指做事粗疏草率，不细致周到。<span class="lyseealso"><span>【参】</span><span><a href="#11.26" class="lyref">11.26</a> <span class="lyq">居则曰“不吾知也”。</span></span></span></p></li>
 <li><p><span class="lyterm">斐（<span class="lypinyin">fěi</span>）然成章</span>：已经形成光彩绚丽的花纹图案了，这里是用布匹上的美丽花纹来比喻弟子已经取得了可观的成绩。<span class="lyterm">斐</span>：五彩交错。<a id="zhang1"></a><span class="lyterm">章</span>：彩色，花纹。<span class="lyexample"><span>【例】</span><span>《孟子·尽心上》：<span class="lyq">君子之志于道也，不成章不<a href="#da2">达</a>。</span>成语“斐然成章”指写出来的文章富有文采。</span></span></p></li>
 <li><p><span class="lyterm">裁</span>：剪裁，这是接着“斐然成章”的比喻，指引导，教正。孔子对学生们既感欣慰又怀隐忧的心情跃然纸上。</p></li>
 </ul>
@@ -2608,7 +2608,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
 <p><a id="shushi"></a><span class="lyterm">饭疏食</span>：吃粗糙的饭。<span class="lyterm">疏</span>：粗，不精细，与 <a href="#10.8" class="lyref">10.8</a> <span class="lyq">食不厌精</span>的“精”相对。<span class="lyexample"><span>【例】</span><span>成语“志大才疏”。</span></span></p>
-<p>如果<span class="lyterm">食</span>特指谷类主食，<span class="lyterm">疏食</span>就是高纤维难消化的糙米饭、高粱饭等。<span class="lyseealso"><span>【参】</span><span><a href="#6.11" class="lyref">6.11</a> <span class="lyq">一箪食，一瓢饮，在陋巷，人不堪其忧，回也不改其乐。</span></span></span></p>
+<p>如果认为<span class="lyterm">食</span>特指谷类主食，那么<span class="lyterm">疏食</span>就是高纤维难消化的糙米饭、高粱饭等。<span class="lyseealso"><span>【参】</span><span><a href="#6.11" class="lyref">6.11</a> <span class="lyq">一箪食，一瓢饮，在陋巷，人不堪其忧，回也不改其乐。</span></span></span></p>
 </li>
 <li><p><a id="gong1b"></a><span class="lyterm">肱</span>（<span class="lypinyin">gōng</span>）：上臂，泛指胳膊。</p></li>
 <li>
@@ -3303,7 +3303,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#9.19">9.19</a></div>
 <div class="lybloboriginaltext"><p>子曰：“譬如为山，未成一篑，止，吾止也。譬如平地，虽覆一篑，进，吾往也。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">为山</span>：起造山丘。<span class="lyterm">平地</span>：填平凹地。</p></li>
+<li><p><span class="lyterm">为山</span>：起造山丘。<span class="lyterm">平地</span>：填平凹地。<span class="lyterm">平</span>是动词，可以从结构相同的前一句的“为”看出来，这种情况在文言文中很常见。</p></li>
 <li><p><span class="lyterm">篑</span>（<span class="lypinyin">kuì</span>）：装土的竹筐。<span class="lyterm">未成一篑</span>指只差一筐土就成功了。<span class="lyseealso"><span>【参】</span><span>《尚书·周书·旅獒》（伪）：<span class="lyq">不<a href="#jin1">矜</a>细行，终累大德。为山九<a href="#ren4">仞</a>，功亏一篑。</span>（<a id="lei3a"></a>累（<span class="lypinyin">lěi</span>）：损害，连累。）成语“功亏一篑”指做事只差最后一点努力或进展就成功了，含有惋惜的意味。《荀子·修身》：<span class="lyq">道虽<a href="#er3">迩</a>，不行不至；事虽小，不为不成。</span>朱熹《近思录·为学大要·五十三》：<span class="lyq">今之为学者，如登山麓，方其迤逦，莫不阔步，及到<a href="#jun4">峻</a>处便止。须是要刚决果敢以进。</span>（麓（<span class="lypinyin">lù</span>）：山脚。迤逦（<span class="lypinyin">yǐ lǐ</span>）：斜曲缓行。）</span></span></p></li>
 </ul></div>
 </div>
@@ -3814,7 +3814,7 @@ img.characterimg {
 <p>曰：“敢问死。”曰：“未知生，焉知死？”</p>
 </div>
 <div class="lyblobannotation">
-<ul class="lyblobitemize"><li><p><a id="gan3"></a><span class="lyterm">敢</span>：表示自谦，相当于冒昧地，斗胆。<span class="lyexample"><span>【例】</span><span><a href="#20.1" class="lyref">20.1</a> <span class="lyq">予小子履，敢用玄牡。</span></span></span></p></li></ul>
+<ul class="lyblobitemize"><li><p><a id="gan3"></a><span class="lyterm">敢</span>：谦逊地引出自己的行为，好像鼓足了勇气才敢这么做似的，相当于冒昧地、斗胆。<span class="lyexample"><span>【例】</span><span><a href="#20.1" class="lyref">20.1</a> <span class="lyq">予小子履，敢用玄牡。</span></span></span></p></li></ul>
 <p>孔子对于鬼神，没有明确否定，也不强调其存在，他更关心的是人间<a href="#junchenfuzi">伦常</a>。<span class="lyseealso"><span>【参】</span><span><a href="#1.9" class="lyref">1.9</a> <a href="#3.12" class="lyref">3.12</a> 。《说苑·辨物》：<span class="lyq"><a href="#zigong">子贡</a>问孔子：“死人有知无知也？”孔子曰：“吾欲言死者有知也，恐孝子顺孙妨生以送死也；欲言无知，恐不孝子孙弃不葬也。<a href="#zigong">赐</a>，欲知死人有知将无知也？死徐自知之，犹未晚也。”</span>（妨生以送死：妨害生者的生活，即过度破费，来给死者送终。将（<span class="lypinyin">jiāng</span>）：连词，或。徐：缓慢，慢慢地。）</span></span></p>
 </div>
 </div>
@@ -3995,7 +3995,7 @@ img.characterimg {
 </div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">毋吾以也</span>：不要因为我（而不畅所欲言）呀。<span class="lyterm">以</span>：“以为念”的略语，即顾虑。具体的原因在前面说了：<span class="lyterm">吾一日长（<span class="lypinyin">zhǎng</span>）乎尔</span>。<span class="lyterm">一日</span>表示时间短，是轻松诙谐的说法。从4位弟子的排列顺序推测，曾皙比子路年纪小，比冉有年纪大。</p></li>
-<li><p><span class="lyterm">居则曰‘不吾知也’</span>：（你们）平时动不动就说“没人赏识我啊”。<a id="ju1"></a><span class="lyterm"><a href="#ju1a">居</a></span>：指平日里，闲暇时。<span class="lyterm">则</span>：表示动作的承接关系。</p></li>
+<li><p><span class="lyterm">居则曰‘不吾知也’</span>：（你们）平时动不动就说“没人赏识我啊”。<a id="ju1"></a><span class="lyterm"><a href="#ju1a">居</a></span>：指平日里，闲暇时。如果要对应到它的动词属性，可以说“一有空”。<span class="lyterm">则</span>：表示动作的承接关系。</p></li>
 <li><p><span class="lyterm"><a href="#heyi">何以</a></span>：怎样，指做什么，如何表现。</p></li>
 <li><p><span class="lyterm">率</span>：可理解为直率、不假思索，也可理解为率先、抢着，都符合子路的性格。<span class="lyterm">率尔</span>就好像现代口语“着急忙慌”的感觉。这几位弟子中子路最年长，先回答也是应该的。</p></li>
 <li><p><span class="lyterm"><a href="#she4">摄</a></span>：夹持，挟制，两头受气。这可以从其本义“持”理解，也可以借助“镊”理解。</p></li>
@@ -5595,7 +5595,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li><p><span class="lyterm">夫人</span>：《曲礼下》孔颖达疏：<span class="lyq">夫，扶也，言扶持于王也。</span></p></li>
 <li><p><span class="lyterm">小童</span>：国君夫人对自己的谦称。《曲礼下》郑玄注：<span class="lyq">若云未成人也。</span></p></li>
-<li><p><a id="gua3"></a><span class="lyterm"><a href="#gua3a">寡</a></span>：王侯对自己的谦称，一说意为孤独，一说意为少<a href="#de2a">德</a>。<span class="lyterm">寡小君</span>：《曲礼下》孔颖达疏：<span class="lyq">君之妻曰小君，而云寡者，亦从君为谦也。</span><span class="lyseealso"><span>【参】</span><span>《老子·三十九章》：<span class="lyq">贵以贱为本，高以下为基。是以侯王自称孤、寡、不谷。</span></span></span></p></li>
+<li><p><a id="gua3"></a><span class="lyterm"><a href="#gua3a">寡</a></span>：王侯对自己的谦称，意为少<a href="#de2a">德</a>或孤独，二者是因果关系。对别国人谦称本国国君，可称<span class="lykeyword">寡君</span>。<span class="lyterm">寡小君</span>：《曲礼下》孔颖达疏：<span class="lyq">君之妻曰小君，而云寡者，亦从君为谦也。</span><span class="lyseealso"><span>【参】</span><span>《老子·三十九章》：<span class="lyq">贵以贱为本，高以下为基。是以侯王自称孤、寡、不谷。</span></span></span></p></li>
 </ul>
 </div>
 </div>
@@ -6378,7 +6378,7 @@ img.characterimg {
 <li><p><span class="lyterm"><a href="#zhou1a">周</a>亲</span>：至亲。<span class="lyterm">虽有周亲</span>句是<a href="#wu">周武王</a>说的，见于《尚书·周书·泰誓中》（伪），是<a href="#wu">周武王</a>出兵伐<a href="#zhou">纣</a>的誓师词。本句接在<span class="lyq">予有<a href="#luanchen">乱臣</a>十人，同心同德</span>之后。<span class="lyterm">百姓有过</span>之前还有：<a id="tianshitianting"></a><span class="lyq">天视自我民视，天听自我民听。</span></p></li>
 <li><p><span class="lyterm">谨权量（<span class="lypinyin">liáng</span>），审法度，修废官</span>：严谨明细地制定度量衡标准，整顿恢复荒废的职能部门。<span class="lyterm">权量</span>：称重量与测体积的工具，代指度量衡标准。<span class="lyterm">法度</span>也指度量衡，而非法律制度。<span class="lyseealso"><span>【参】</span><span>《汉书·律历志》引用了这句话，认为是<span class="lyq">周衰<a href="#shiguan">官失</a>，孔子陈<a href="#xianwang">后王</a>之法。</span>颜师古《律历志》注：<span class="lyq">权，谓斤两也；量，斗<a href="#hu2">斛</a>也；法度，丈尺也。</span></span></span></p></li>
 <li><p><span class="lyterm">兴灭国，继绝世，举逸民</span>：振救重建已遭倾覆的邦国，接续沿袭断绝禄位的世家，征举任用避世隐居的贤人。</p></li>
-<li><p><span class="lyterm">说</span>：即说民，取悦于民。</p></li>
+<li><p><span class="lyterm">说</span>：民悦。</p></li>
 </ul>
 </div>
 </div>
