--- a/aboly.html
+++ b/aboly.html
@@ -816,7 +816,10 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="yi4"></a><span class="lyterm">义</span>：宜，适当，又引申为正义，符合道德规范。<span class="lyexample"><span>【例】</span><span><a href="#7.16" class="lyref">7.16</a> <span class="lyq">不义而富且贵，于我如浮云。</span></span></span><span class="lyseealso"><span>【参】</span><span>《韩非子·解老》：<span class="lyq">义者，君臣上下之事，父子贵贱之差也，知交朋友之接也，亲疏内外之分也。……义者，谓其宜也，宜而为之。</span>《孟子·告子上》：<span class="lyq">仁，人心也；义，人路也。</span>可以说，仁是“真正的人”的精神，义是“真正的人”的表现，也就是 <a href="#16.11" class="lyref">16.11</a> <span class="lyq">行义以达其道。</span></span></span></p></li>
 <li><p><span class="lyterm">言可复也</span>：说过的话能够兑现。<span class="lyterm">复</span>：抵偿，偿还，引申为履行，实践。</p></li>
-<li><p><span class="lyterm">因不失其亲，<a href="#yi4d">亦</a>可宗也</span>：较难确解。唐代张说《府君墓志》等古文中，把上半句引作<span class="lyq">姻不失亲</span>；南朝梁皇侃《论语义疏》里，下半句为<span class="lyq">亦可宗敬也</span>。据此理解，<span class="lyterm">因</span>通“姻”，如因缘亦通姻缘；<span class="lyterm">宗</span>为动词，尊崇，效法。这句话的意思就是，结婚成家以后，如果不疏远了本家亲戚，也是值得尊敬的榜样。如果把“亲”单纯地理解为<a href="#qinqin">父母</a>，就类似于现代说的不能“娶了媳妇忘了娘”。<span class="lyseealso"><span>【参】</span><span><a href="#18.10" class="lyref">18.10</a> </span></span></p></li>
+<li>
+<p><span class="lyterm">因不失其亲，<a href="#yi4d">亦</a>可宗也</span>：较难确解。唐代张说《府君墓志》等古文中，把上半句引作<span class="lyq">姻不失亲</span>；南朝梁皇侃《论语义疏》里，下半句为<span class="lyq">亦可宗敬也</span>。据此理解，<span class="lyterm">因</span>通“姻”，如因缘亦通姻缘；<span class="lyterm">宗</span>为动词，尊崇，效法。这句话的意思就是，结婚成家以后，如果不疏远了本家亲戚，也是值得学习的榜样。如果把“亲”单纯地理解为<a href="#qinqin">父母</a>，就类似于现代说的不能“娶了媳妇忘了娘”。</p>
+<p>这句话如果没有“因”，含义就比较明确，句式也更整齐；结合后文看，说的应是<a href="#junzi">君子</a>在人伦方面的表率作用。<a href="#8.2" class="lyref">8.2</a> <span class="lyq">君子笃于亲，则民兴于仁；故旧不遗，则民不偷。</span><a href="#18.10" class="lyref">18.10</a> <span class="lyq">君子不施其亲，不使大臣怨乎不以，故旧无大故则不弃也。</span></p>
+</li>
 </ul></div>
 </div>
 <a id="1.14"></a><div class="lyblob">
